# json-schema

./: .gitignore  Cargo.toml  Dockerfile  Dockerfile.rs  README.md  package.json  run.sh  rustfmt.toml  server.js  server.ts
.github/workflows/: correct-id-urls.yml
examples/: create.json
examples/functions/authenticate/: function.json
examples/functions/condition/: function.json
examples/functions/create/: function.json
examples/functions/loop/: function.json
examples/functions/store-file/: function.json
examples/functions/subaction/: function.json
examples/functions/update/: function.json
schemas/actions/: function.json
schemas/actions/function/: branches.json  option.json  options.json  paths.json
schemas/actions/function/option/: additional.json  configuration.json  validation.json
schemas/actions/function/option/additional/: model.json  properties.json
schemas/actions/function/option/types/: action.json  assign.json  authentication-profile.json  base.json  boolean.json  collection.json  filter.json  input-variable-map.json  integer.json  json.json  map.json  model.json  multiline-text.json  number.json  object.json  output.json  property-map.json  property.json  record.json  schema-model.json  select.json  string.json  text.json  value.json
schemas/actions/function/options/: configuration.json
schemas/actions/function/options/types/: base.json  boolean.json  integer.json  model.json  record.json  string.json
schemas/models/: README.md  schema_model.json  structured_model.json
src/: main.rs
