[package]
name = "json-schema"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.7"
once_cell = "1.20.2"
regex = "1.11.1"
tokio = { version = "1.41.0", features = ["macros", "rt-multi-thread", "signal"] }
tower = "0.5.1"
tower-http = { version = "0.6.1", features = ["fs"] }

[dev-dependencies]
serde_json = "1.0.132"
